# rust_projects

H-Bank_Workspace/: Cargo.toml
immunogenicity_rust/: Cargo.toml  README.md  pyproject.toml
immunogenicity_rust/TESLA_IEDB/: analysis3.py  analysis4.py  analysis_3_temp.py  examine_rho_foreign_d_filter_off.py  modeling_and_aucs.py  modeling_immunogenicity.py  modeling_immunogenicity_distributed_2.py
immunogenicity_rust/TESLA_IEDB/immunogenicity_outputs/: immunogenicity_outputs_all_tcr_all_combos_model_AAAWYLWEV_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AAWGFFPYL_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AIATFAAPV_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AIGEVLVSV_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AIISGDSPV_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AIMDKNIIL_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AIMDKNIML_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AIMEKNIIL_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AIMEKNIVL_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AINIALIAV_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AITEVECFL_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AITTILAAV_HLA-A0201.pkl  immunogenicity_outputs_all_tcr_all_combos_model_AIVDKNITL_HLA-A0201.pkl  (+5 more)
immunogenicity_rust/examples/: examples.py
immunogenicity_rust/src/: lib.rs  lib_data_structures_auxiliary_functions.rs  lib_io.rs  lib_math_functions.rs  lib_rust_function_versions.rs
(+17 files in other folders)
