[package]
name = "immunogenicity_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "immunogenicity_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] } 
pyo3-macros = "0.20.0"

serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tar = { version = "0.4.40" }
flate2 = { version = "1.0.30" }

rayon = "1.10.0"
dashmap = "5.5.3"
ndarray = "0.15.6"
eval-metrics = "1.0.2"